force-app/main/default/objects/PlanejamentoVendas__c/PlanejamentoVendas__c.object-meta.xml
<CustomObject>
    <label>Planejamento de Vendas</label>
    <nameField>
        <label>Planejamento de Vendas Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planejamentos de Vendas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>