force-app/main/default/objects/PlanejamentoVendas__c/fields/AgriculturalProductivityCustomer__c.field-meta.xml
<CustomField>
    <fullName>AgriculturalProductivityCustomer__c</fullName>
    <label>Produtividade Agrícola do Cliente</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>