force-app/main/default/objects/PlanejamentoVendas__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Planejamentos de Vendas</relationshipLabel>
    <relationshipName>Planejamentos_de_Vendas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>