force-app/main/default/objects/PlanejamentoVendas__c/fields/harvest__c.field-meta.xml
<CustomField>
    <fullName>harvest__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Safra</label>
    <referenceTo>Safra__c</referenceTo>
    <relationshipLabel>Planejamentos de Vendas</relationshipLabel>
    <relationshipName>Planejamentos_de_Vendas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>