force-app/main/default/objects/PlanejamentoVendas__c/fields/PlantingStrategy__c.field-meta.xml
<CustomField>
    <fullName>PlantingStrategy__c</fullName>
    <label>Estratégia de Plantio</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>