force-app/main/default/objects/PlanejamentoVendas__c/fields/PreviousCropVolume__c.field-meta.xml
<CustomField>
    <fullName>PreviousCropVolume__c</fullName>
    <label>Volume de Safra Anterior</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>