force-app/main/default/objects/PlanejamentoVendas__c/fields/SalesOrganization__c.field-meta.xml
<CustomField>
    <fullName>SalesOrganization__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Organização de Venda</label>
    <referenceTo>SalesOrg__c</referenceTo>
    <relationshipLabel>Planejamentos de Vendas</relationshipLabel>
    <relationshipName>Planejamentos_de_Vendas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>