force-app/main/default/objects/PlanejamentoVendas__c/fields/SalesValuePreviousCrop__c.field-meta.xml
<CustomField>
    <fullName>SalesValuePreviousCrop__c</fullName>
    <label>Valor de Venda Safra Anterior</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>