force-app/main/default/objects/PlanejamentoVendas__c/fields/TotalSalesVolume__c.field-meta.xml
<CustomField>
    <fullName>TotalSalesVolume__c</fullName>
    <label>Volume de Venda Total</label>
    <summarizedField>ProdutosPlanejamento__c.SalesVolume__c</summarizedField>
    <summaryForeignKey>ProdutosPlanejamento__c.Planning__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>