force-app/main/default/objects/PlanejamentoVendas__c/fields/TotalSaleValue__c.field-meta.xml
<CustomField>
    <fullName>TotalSaleValue__c</fullName>
    <label>Valor de Venda Total</label>
    <summarizedField>ProdutosPlanejamento__c.SaleValue__c</summarizedField>
    <summaryForeignKey>ProdutosPlanejamento__c.Planning__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>