force-app/main/default/objects/PlanejamentoVendas__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Ano</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>